Fixed layout issues during DatePicker animation and keyboard navigation Added methods horizontal/vertical to scout.Insets

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/datepicker/DatePicker.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/datepicker/DatePicker.css
@@ -18,7 +18,6 @@
 /* necessary for animation */
 .date-picker-scrollable {
   position: relative;
-  height: 100%;
   padding: 0px 6px;
 }
 
